...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton9"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton2"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/imageButton1"
        app:layout_constraintTop_toBottomOf="@+id/circleTimer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton12"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
...
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleTimer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton4"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton5"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
...
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton7"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton8"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton11"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/question_mark"
        android:contentDescription="@string/button_function"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton10"
        android:layout_width="84dp"
        android:layout_height="84dp"
...
